# example-static-haskell-nix

./: .gitignore  LICENSE  README.md  default.nix  example-static-haskell-nix.cabal  hie.yaml
.github/workflows/: ci.yaml
app/: Main.hs
nix/: default.nix  overlay.nix
src/: ExampleStatic.hs
